<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_primary"
    android:padding="16dp"
    tools:context=".NoteDetailsActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title_bar_layout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/page_title"
            android:text="@string/add_new_note"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />
        <ImageButton
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:id="@+id/save_note_btn"
            android:src="@drawable/ic_baseline_done_24"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            app:tint="@color/white"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/piu" />
   </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_bar_layout"
        android:orientation="vertical"
        android:padding="16dp"
        android:id="@+id/container"
        android:layout_marginVertical="26dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/rounded_corner">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/notes_title_text"
            android:hint="@string/title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginVertical="8dp"
            android:padding="12dp"
            android:textColor="@color/black"
            tools:ignore="TextFields"
            android:autofillHints="" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/notes_content_text"
            android:hint="@string/content"
            android:minLines="15"
            android:textSize="20sp"
            android:gravity="top"
            android:layout_marginVertical="8dp"
            android:padding="12dp"
            android:textColor="@color/black"
            android:importantForAutofill="no"
            tools:ignore="TextFields" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/container">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/white"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:layout_gravity="bottom"
            android:id="@+id/home"
            android:contentDescription="@string/vgbg" />
    </LinearLayout>

</RelativeLayout>