<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_marginVertical="26dp"
            android:backgroundTint="@color/white"
            android:orientation="vertical"
            android:background="@drawable/rounded_corner">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/note_title"
                android:textColor="@color/black"
                android:text="@string/note_title"
                android:textSize="18sp"
                android:layout_marginVertical="4dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/note_content"
                android:text="@string/this_can_be_note_content_that_can_belong"
                android:maxLines="2"
                android:ellipsize="end"
                android:textSize="17sp"
                android:layout_marginVertical="4dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/note_date"
                android:text="@string/note_date"
                android:textSize="12sp"
                android:gravity="right"
                android:layout_marginVertical="4dp"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>